# composer

./: .coveragerc  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  params-testcar.yaml  params.yaml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug.yml  feature-request.yml
.github/workflows/: catkin-build.yml  ci-foxy.yml  ci-humble.yml  ci-jazzy.yml  colcon-build.yml  lint.yml
composer/: composable.py  compose_plugin.py  events.py  launch_plugin.py  launcher.py  muto_composer.py  native_plugin.py  node.py  pipeline.py  router.py  stack.py  twin.py
composer/introspection/: introspector.py  launch_description_diff.py  launch_description_structure.py  launch_description_visualizer.py  launcher.py  traverser.py
composer/introspection/model/: difference.py
composer/introspection/schemas/: __init__.py
composer/model/: composable.py  edge_device.py  node.py  param.py  stack.py
composer/plugins/: base_plugin.py  compose_plugin.py  launch_plugin.py  native_plugin.py  provision_plugin.py
composer/stack_handlers/: __init__.py  archive_handler.py  ditto_handler.py  json_handler.py  legacy_handler.py  registry.py
composer/state/: __init__.py  persistence.py
composer/subsystems/: __init__.py  digital_twin_integration.py  message_handler.py  orchestration_manager.py  pipeline_engine.py  stack_manager.py  watchdog.py
composer/utils/: stack_parser.py
composer/workflow/: launcher.py  pipeline.py  router.py  safe_evaluator.py
composer/workflow/schemas/: pipeline_schema.py
config/: composer.yaml  pipeline.yaml
docs/: README.md  architecture.md
docs/samples/talker-listener/: talker-listener-json-instance.json  talker-listener-json.json  talker-listener-xarchive-instance.json  talker-listener-xarchive.json
launch/: composer.launch.py
muto_composer/: events.py  muto_composer.py
muto_composer/introspection/: introspector.py  traverser.py
muto_composer/introspection/model/: difference.py
muto_composer/model/: composable.py  node.py  param.py  stack.py
muto_composer/plugins/: __init__.py  base_plugin.py  compose_plugin.py  launch_plugin.py  provision_plugin.py
muto_composer/stack_handlers/: __init__.py  archive_handler.py  ditto_handler.py  json_handler.py  registry.py
muto_composer/state/: __init__.py  persistence.py
muto_composer/subsystems/: __init__.py  digital_twin_integration.py  message_handler.py  orchestration_manager.py  pipeline_engine.py  stack_manager.py  watchdog.py
muto_composer/utils/: __init__.py  paths.py  stack_parser.py
muto_composer/workflow/: launcher.py  pipeline.py  router.py  safe_evaluator.py
muto_composer/workflow/schemas/: pipeline_schema.py
src/: composer_plugin.py  launch_plugin.py  muto_composer.py
src/composer/: __init__.py  pipeline.py  router.py
test/: conftest.py  test_architecture_validation.py  test_composable.py  test_compose_plugin.py  test_digital_twin_integration.py  test_ditto_handler_stack_model.py  test_events.py  test_integration_stack_handlers.py  test_introspector.py  test_launch_plugin.py  test_launcher.py  test_launcher_async.py  test_legacy_handler_stack_model.py  test_message_handler.py  test_muto_composer.py  test_native_plugin.py  test_node.py  test_param.py  test_pipeline.py  test_provision_plugin.py  test_router.py  test_safe_evaluator.py  test_stack.py  test_stack_analyzed_processing.py  test_stack_json_pipeline_fix.py  test_stack_manager.py  test_talker_listener_samples.py  test_traverser.py  test_watchdog.py
