<!-- 
#
# Copyright (c) 2025 Composiv.ai
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Composiv.ai - initial API and implementation
#
-->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>composer</name>
  <version>0.2.0</version>
  <description>Composer provides orchestration utilites for ROS2 environment</description>
  <maintainer email="info@composiv.ai">composiv.ai</maintainer>
  <license>Eclipse Public License</license>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  

  <build_depend>python3-jsonschema</build_depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
