<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- 
#
# Copyright (c) 2025 Composiv.ai
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Composiv.ai - initial API and implementation
#
-->

<package format="3">
  <name>muto_composer</name>
  <version>0.42.0</version>
  <description>Eclipse Muto Composer - stack deployment and orchestration engine that manages provisioning, launching, and lifecycle of ROS 2 software stacks</description>
  <maintainer email="info@composiv.ai">composiv.ai</maintainer>
  <license file="LICENSE">EPL-2.0</license>

  <url type="website">https://eclipse.dev/muto/</url>
  <url type="repository">https://github.com/eclipse-muto/composer</url>
  <url type="bugtracker">https://github.com/eclipse-muto/composer/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>python3-jsonschema</build_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>std_srvs</depend>
  <depend>python3-requests</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
